Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -1,32 +1,33 @@
 # 第一章 初めに
-`この文書が必要な理由。なぜあなたが読む必要があるか。デジタルテキストがどのように異なるか、をこの章で書く`
+> この章は、この文書の位置付け、それが必要な理由、なぜあなたが読む必要があるかを書く。
+
+> 冒頭に、非常に簡潔にこの文書は何であるかを書く。最初から「印刷の組版とは根本的に異なる技術的基盤を持っている」どうのこうの、と書くと重すぎる。
+ 
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、その要件をテキストデータと組版の両面について議論する。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+
+この文書では、表示環境に合わせた柔軟な表示が可能なテキストシステム上で表示されるテキストデータをデジタルテキストと呼ぶ。
 
 ## 1. この文書の目的
+> なぜこの文書が必要なのか。説得力のある形で。
+> 
+人間の作り出すものは、常にその用いられる技術の性質を反映しており、それは組版においても同様である。
 
-`なぜこの文書が必要なのか。説得力のある形で。`
+印刷のための組版規則は、金属活字を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立し、写真植字の影響を受け発展した。よってその規則はこれらの技術の性質を色濃く反映している。また、紙に印刷したものを配布するという仕組み自体の性質を反映している。
 
-Webに代表されるデジタルテキストの組版は、印刷の組版とは根本的に異なる技術的基盤を持っている。
+> 現在の組版規則が、活版印刷や写真植字の技術制約のもとで作り上げられたことを端的に示す例はあるか？
 
-一つの根本的な違いは、組版がどこで、どのように起こるかだ。印刷においては送り手が組版を決定する。組版は人手による調整が加えられ、印刷というプロセスを用いて画像として固定され、その単一のコピーが受け手の元に届けられる。
+デジタルテキストの組版は、印刷の組版とは根本的に異なる技術的基盤を持っている。
 
-対してデジタルテキストで送り手が送るのはテキストと組版指示であり、最終的な組版を決定するのは受け手である。組版の決定は各々の受け手の環境を反映してソフトウェアが動的に、かつ完全に自動的に行う。受け手の環境が単一でないため、例えば行の折り返し位置は受け手ごとに異なる可能性がある。結果膨大な数の異なる組版結果が生成され得る。
+例えば、印刷では送り手の元で組版が決定され、印刷というプロセスを用いて画像として固定され、その単一の画像のコピーが受け手の元に届けられる。それに対して、デジタルテキストで送り手が送るのはテキストと組版指示であり、受け手の環境のもとで最終的な組版が決定される。このため、その受け手の環境に応じて数多くの異なる組版結果が生成され得る。よって、例えばあらかじめ行の折り返し位置を予測することができない。
 
-このように基盤技術が置き換わるとき、
+このような違いは、デジタルテキストの組版に、印刷にはなかった制約を加え、また同時に新たな可能性を与える。
 
-このような違いは、デジタルテキストの組版に、印刷にはなかった制約を加え、また同時に新たな可能性を与える。これは印刷の組版が活字などの制約と可能性を反映しているのと同様だ。
+> 新たな制約と可能性の例。
 
-従来の努力の多くは、印刷で培われ確立された日本語組版規則をデジタル上で再現することに払われてきた。ワードプロセッサー、PDF、ページレイアウトソフト、電子書籍などはこの素晴らしい成果だ。また「日本語組版の要件」は印刷の組版規則を英語で記述し、それがデジタルデバイスにおいて実装されることに大きな役割を果たしてきた。
+この文書は、デジタルテキストの組版において、これまで培われてきた組版規則にどのような変更が要請されるのか、またどのような今までにない可能性があるのか、それらを考える一助となるように執筆した。それによって、より高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
-（敏先生への返答：それまで培われてきた技術はそれぞれ理由のあることであって、それを参考にしないことには先に進むことができません。何を守るべきか、新しい可能性を得るために何を捨てる必要があるのか、はとても難しい問いです。その一つの試み、提案がjlreq-dということかと思います。もう少し丁寧な説明を考えます） （技術の移り変わりにおける模倣と発展について。何を守るべきか、新しい可能性を得るために何を捨てる必要があるのかは難しい問い）
-（切り落とすこと、単純化にによってより良い実装が期待できる部分がある）
+既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、将来新しい知見が得られた時に、この文書もまたそれを取り込んで進化してゆくことが必要となろう。
 
-`*1 「書写から印刷へ、馬車から自動車へ、基盤技術が変わるときにはその前の技術の模倣から始まった」といった技術基盤が変わるときに繰り返されてきた歴史について説明する？ 今「しかるに」で繋いでいるので、従来の努力に対して少々ネガティブな印象を与えてしまう懸念がある。それは意図ではなく正常な過程として捉えるべき。 Side Note で「世界最初の自動車による速度違反は制限時速3キロのところをその4倍の速さで走っていたところを自転車で追っかけてきた警官に捕まったもの」 との逸話を紹介するのも印象的で良いかも。`
-
-この文書ではデジタルテキストの組版が本来的にもつ性質を前提として捉え、その土壌から立ち現れるデジタルネイティブな日本語組版がどのようなものになるか、その姿を考える一助となるように執筆した。それはより高度な日本語組版の実装を助け、また日本語テキストに新たな可能性を与えて将来に繋げてゆくために必要な仕事だと思われる。
-
-既刊の「日本語組版の要件」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、将来新しい知見が得られた時に、この文書もまたそれを取り込んで進化してゆくことが必要となろう。
-
-`• 上で暗黙に示されているが、この文書はwebやメール、メモなどに代表されるようなユーザー環境によって変化するリフロー可能なテキストを主な対象とする。それをどこかで説明。もしくは最初の「デジタルテキスト」を「webテキスト」に変えて、後に一般化するか？`
 
 ## 2. デジタルテキストは印刷とどのように異なるか
 本論に入る前に、デジタルテキスト組版の性質を少し掘り下げておこう。
