Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -1,41 +1,51 @@
 # 第一章 初めに
 > この章は、この文書の位置付け、それが必要な理由、なぜあなたが読む必要があるかを書く。
 
-> 冒頭に、非常に簡潔にこの文書は何であるかを書く。最初から「印刷の組版とは根本的に異なる技術的基盤を持っている」どうのこうの、と書くと重すぎる。
+> 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、その要件をテキストデータと組版の両面について議論する。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、その要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
 
-この文書では、表示環境に合わせた柔軟な表示が可能なテキストシステム上で表示されるテキストデータをデジタルテキストと呼ぶ。
+この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストシステムを、そのデータのあり方、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。
 
 ## 1. この文書の目的
-> なぜこの文書が必要なのか。説得力のある形で。
-> 
-人間の作り出すものは、常にその用いられる技術の性質を反映しており、それは組版においても同様である。
+> なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
+（人間の作り出すものは、常にその用いられる技術の性質を反映しており、それは組版規則においても同様である。）日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している。
 
-印刷のための組版規則は、金属活字を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立し、写真植字の影響を受け発展した。よってその規則はこれらの技術の性質を色濃く反映している。また、紙に印刷したものを配布するという仕組み自体の性質を反映している。
-
+例えば……
 > 現在の組版規則が、活版印刷や写真植字の技術制約のもとで作り上げられたことを端的に示す例はあるか？
 
-デジタルテキストの組版は、印刷の組版とは根本的に異なる技術的基盤を持っている。
+デジタルテキストの組版は印刷の組版とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
 
-例えば、印刷では送り手の元で組版が決定され、印刷というプロセスを用いて画像として固定され、その単一の画像のコピーが受け手の元に届けられる。それに対して、デジタルテキストで送り手が送るのはテキストと組版指示であり、受け手の環境のもとで最終的な組版が決定される。このため、その受け手の環境に応じて数多くの異なる組版結果が生成され得る。よって、例えばあらかじめ行の折り返し位置を予測することができない。
+印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる。（より高度な、美しく読みやすい組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）
+> ルビ付きテキストのコピー＆ペーストなど
 
-このような違いは、デジタルテキストの組版に、印刷にはなかった制約を加え、また同時に新たな可能性を与える。
+本文書では、これらの課題に答えるため、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
+> 組版は目的ではなく、それぞれのテキストの持つ目的を達成するための手段だ。デジタル技術の持つ大きな可能性を利用するために発展すべきものである。
 
-> 新たな制約と可能性の例。
+本文書はまた、デジタルにおいて組版に重要な影響を与える、テキストの作り方、およびフォントに必要な機能についてをカバーしている。
 
-この文書は、デジタルテキストの組版において、これまで培われてきた組版規則にどのような変更が要請されるのか、またどのような今までにない可能性があるのか、それらを考える一助となるように執筆した。それによって、より高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
+> 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
 
-既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、将来新しい知見が得られた時に、この文書もまたそれを取り込んで進化してゆくことが必要となろう。
+書くにあたっては、理由や背景を極力説明し、より良い解決方法を考える一助となるように執筆した。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
+既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスの進化、特に世界のデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
 
 ## 2. デジタルテキストは印刷とどのように異なるか
-本論に入る前に、デジタルテキスト組版の性質を少し掘り下げておこう。
+デジタルテキスト組版が、印刷とどのように異なるかをまとめておく。
 
-ここで、デジタルテキストとは、Webやメールにあるように、受け手のデバイスなどの環境によって柔軟に表示を変えることのできるテキストを指している。
+#### 組版を誰がどこで決定するか
+従来の組版規則は人間が組版を実行するための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの処理を期待するという性質を受け継いでいる。
 
-#### 例外的な入力に対してでも破綻せず合理的な組版を完全に自動的に決定できる必要がある
-従来の組版規則は人間が組版を実行するための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの処理を期待するという性質を受け継いでいる。対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。
+対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビの例。他に良い例はあるか？）
+
+#### 組版のコスト
+印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角の分割を基準とした長さの単位は組版の効率にとって重要であり、また行の調整には手間がかかるのでできるだけ避けたいものである（本当？）。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角の分割を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
+
+組版の実行速度をコストとして捉えると、デジタルテキストは印刷とは異なるコスト圧力を受ける。例えば、デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。
+
+#### 媒体のコスト
+歴史的に書写や印刷において、紙自身とその在庫のコストが大きく、それが組版に大きな影響を与えてきた。例えば英語などに見えるパラグラフの示し方の変遷や、辞書での省略形の利用はその影響の一例である。デジタルテキストにはこの紙のコストが存在しない。
+
 
 #### リフローを起こす
 デジタルテキストにおいては送り手が組版結果を厳密に指定することができない。送り手はCSSやリッチテキストなどを用いて組版の大枠を指定するが、最終的な結果はそれぞれの受け手の環境に従う。特に行長はデバイスの画面サイズやウィンドウのサイズに従って決定されるため、あらかじめ予見することができない。その結果、どこで行が折り返されるのか、長いグループルビが行の途中に来るのか折り返しにぶつかってしまうのか、事前に知ることはできない。
@@ -47,20 +57,10 @@
 
 \*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree、 The Book in Renaissance、 NewHaven、 Yale University Press、 2010)
 
+デジタルデバイスにおいてはその代わりに画面の大きさからの制約を受ける。
+
 #### ページの存在に依存した組版要素が使えない
 例えば脚注や段組。これは前項の一部で良いかね。
-
-#### 活字における作業効率の影響がない
-印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を経済的効率性を以って作成できるような指針として生まれた。それは金属活字や印刷が持っている可能性と同時にその制約を反映したものとなっている。その前提はデジタルデバイス上で変化する。例えば、全角二分三分などの全角を基準とした単位は組版の効率にとって重要であった。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角の整数分の一を基準とする長さは効率に関係がない。
-
-#### 高速に組版を実行できる必要がある
-デジタルデバイスにおいては大量のテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。
-
-#### 紙面のコストが存在しない
-歴史的に書写や印刷において、紙自体、つまり紙面のコストが大きく、それが組版に大きな影響を与えてきた。例えばパラグラフの示し方の変遷はその一例である。また辞書で見る省略形もその影響の一例である。しかしデジタルデバイスにおいてはそのコストは存在しない。
-
-#### 画面の大きさの制約がある
-デジタルデバイスにおいては紙面のコストは無視することができるが、その代わりに画面の大きさからの制約を受ける。
 
 #### 検索、選択、コピー＆ペースト、異なったスタイルの適用、リユース
 （デジタルデバイスならではの動的な要素。ましなタイトルが必要）
