Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -9,9 +9,9 @@
 
 ## 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
-（人間の作り出すものは、常にその用いられる技術の性質を反映しており、それは組版規則においても同様である。）日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している。
 
-例えば……
+日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している。
+
 > 現在の組版規則が、活版印刷や写真植字の技術制約のもとで作り上げられたことを端的に示す例はあるか？
 
 デジタルテキストの組版は印刷の組版とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
@@ -19,10 +19,9 @@
 印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる。（より高度な、美しく読みやすい組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）
 > ルビ付きテキストのコピー＆ペーストなど
 
-本文書では、これらの課題に答えるため、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
-> 組版は目的ではなく、それぞれのテキストの持つ目的を達成するための手段だ。デジタル技術の持つ大きな可能性を利用するために発展すべきものである。
+本文書では、これらの課題に答えるため、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。（組版は目的ではなく、それぞれのテキストの持つ目的を達成するための手段だ。デジタル技術の持つ大きな可能性を利用するために発展すべきものである。）
 
-本文書はまた、デジタルにおいて組版に重要な影響を与える、テキストの作り方、およびフォントに必要な機能についてをカバーしている。
+本文書はまた、デジタルにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、およびフォントに必要な機能についてをカバーしている。
 
 > 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
 
