Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -3,7 +3,7 @@
 
 > 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、その要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、組版システム、およびフォントの要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
 
 この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストシステムを、そのデータのあり方、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。
 
