Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -14,13 +14,11 @@
 
 これに対してデジタルテキストは印刷とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
 
-印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる（より高度な組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）。組版は目的ではなく、それぞれのテキストの持つ目的をよりよく達成するための手段であるから、デジタル技術を利用してさらなる発展が期待される。
+印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる（より高度な組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）。組版は目的ではなく、それぞれのテキストの持つ目的をよりよく達成するための手段であるから、デジタル技術は新たな可能性をもたらすだろう（よって、一度整理しておくことがさらなる発展のために必要）。
 
 本文書では、これらの観点から、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。また、デジタルにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、およびフォントに必要な機能についての章を加えている。
 
 書くにあたっては、理由や背景を極力説明し、より良い解決方法を考える一助となるように執筆した。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
-
-> 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
 
 既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
 
@@ -88,6 +86,9 @@
 
 - 一般の日本語の書き手。日本語使用者、ローカリゼーションエンジニア。
 - テキストシステムの設計者。
+
+> 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
+
 
 ## 4. 執筆方針
 
