Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -25,31 +25,28 @@
 ## 2. デジタルテキストは印刷とどのように異なるか
 デジタルテキスト組版が、印刷とどのように異なるかをまとめておく。
 
-#### 組版を誰がどこで決定するか
-従来の組版規則は人間が組版を実行するための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの処理を期待するという性質を受け継いでいる。
+#### 組版が完全に自動的に決まる必要がある
+従来の組版規則は人間が組版を行うための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの判断を期待するという性質を受け継いでいる。
 
-対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビの例。他に良い例はあるか？）
+対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビの例。他に端的な例はあるか？）
 
 #### 組版のコスト
-印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角の分割を基準とした長さの単位は組版の効率にとって重要であり、また行の調整には手間がかかるのでできるだけ避けたいものである（本当？）。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角の分割を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
+印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角の分割を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避けたいものである（本当？）。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角の分割を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
 
-組版の実行速度をコストとして捉えると、デジタルテキストは印刷とは異なるコスト圧力を受ける。例えば、デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。
+組版の実行速度をコストとして捉えると、デジタルテキストは印刷とは異なるコスト圧力を受ける。例えば、デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。一次元的な処理は高速に実行可能であるが、より広い範囲を見て、または試行錯誤を伴う調整はより実行時間がかかる。
 
-#### 媒体のコスト
-歴史的に書写や印刷において、紙自身とその在庫のコストが大きく、それが組版に大きな影響を与えてきた。例えば英語などに見えるパラグラフの示し方の変遷や、辞書での省略形の利用はその影響の一例である。デジタルテキストにはこの紙のコストが存在しない。
+#### 媒体の性質
+歴史的に書写や印刷において、紙のコストおよび印刷物の在庫のコストが大きく、それが組版に大きな影響を与えてきた。例えば英語などに見えるパラグラフの示し方の変遷や、辞書での省略形の利用、新聞における平体の利用など（どれも確認必要）はその影響の一例である。デジタルテキストにはこのコストが存在せず、よってコストのための組版の工夫が必然性を失う。
 
+対して、デジタルテキストは、画面の大きさによる制限を受ける。種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。
 
 #### リフローを起こす
-デジタルテキストにおいては送り手が組版結果を厳密に指定することができない。送り手はCSSやリッチテキストなどを用いて組版の大枠を指定するが、最終的な結果はそれぞれの受け手の環境に従う。特に行長はデバイスの画面サイズやウィンドウのサイズに従って決定されるため、あらかじめ予見することができない。その結果、どこで行が折り返されるのか、長いグループルビが行の途中に来るのか折り返しにぶつかってしまうのか、事前に知ることはできない。
+デジタルテキストにおいては送り手が組版結果を厳密に指定することができない。送り手はCSSやスタイル付きテキストなどを用いて組版の大枠を指定するが、最終的な結果はそれぞれの受け手の環境に従う。特に行長はデバイスの画面サイズやウィンドウのサイズに従って決定されるため、あらかじめ予見することができない。その結果、どこで行が折り返されるのか、長いグループルビが行の途中に来るのか折り返しにぶつかってしまうのか、事前に知ることはできない。
 
 #### 冊子形態が利点を失う
-内容が固定の大きさのページに分かれた本、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。それは冊子本の形がそれ以前から存在した巻物に対して大きな優位性を持っていたからだ。冊子本は四角く、背表紙があるため収納・管理が容易である。ページ番号によりランダムアクセスが可能で、ページ番号による安定的な参照が可能である。しかしデジタルテキストによる冊子本はこれらの優位点を失う。収納・管理の容易性、ランダムアクセス性はデジタルデバイスの性質として冊子本の形式に頼らずに達成されている。またリフローによりどこでページが区切れるのか、そもそも全体が何ページなのかが不定であり、安定した参照の方法としてページ番号を使うことができない
-
-このような技術環境のもと、Webで巻物、スクロールという古い形式が復活し、また目的に沿った新しい画面構成がさまざまに試されている。
+内容が固定の大きさのページに分かれた本、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。古来の巻物に対して、冊子本が大きな優位性を持っていたからだ。冊子本は四角く、背表紙があるため収納・管理が容易である。ページ番号によりランダムアクセスが可能で、ページ番号による安定的な参照が可能である。しかしデジタルテキストには収納や検索の機能が本来的に備わっており冊子本の形式に頼らずに達成される。よって、冊子本はその本来の利点の多くを失った。デジタルテキストにおいて巻物という古い形式が復活し、また目的に沿った新しい画面構成がさまざまに試されている。
 
 \*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree、 The Book in Renaissance、 NewHaven、 Yale University Press、 2010)
-
-デジタルデバイスにおいてはその代わりに画面の大きさからの制約を受ける。
 
 #### ページの存在に依存した組版要素が使えない
 例えば脚注や段組。これは前項の一部で良いかね。
