Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -1,26 +1,35 @@
-# 第一章 この文書の目的
+# 第1章 この文書の目的・対象読者
 > この章は、この文書の位置付け、それが必要な理由、なぜあなたが読む必要があるかを書く。
 
 > 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、組版システム、およびフォントの要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
 
 この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストシステムを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。
 
 ## 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
 
-日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している（端的な例？）。
+日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している。
 
-これに対してデジタルテキストは印刷とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
+これに対してデジタルテキストは印刷とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
 
-印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる（より高度な組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）。組版は目的ではなく、それぞれのテキストの持つ目的をよりよく達成するための手段であるから、デジタル技術は新たな可能性をもたらすだろう（よって、一度整理しておくことがさらなる発展のために必要）。
+（このパラグラフ書きすぎ。書き直す）印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る（例）。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる（より高度な組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）。組版は目的ではなく、それぞれのテキストの持つ目的をよりよく達成するための手段であるから、デジタル技術は新たな可能性をもたらすだろう（よって、一度整理しておくことがさらなる発展のために必要）。
 
 本文書では、これらの観点から、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。また、デジタルにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、およびフォントに必要な機能についての章を加えている。
 
-書くにあたっては、理由や背景を極力説明し、より良い解決方法を考える一助となるように執筆した。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
+執筆にあたっては、理由や背景を極力説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
 既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
+
+## 5. 対象読者
+
+デジタルデバイスにおいてはテキストを作成する環境にも従来との違いがある。書き手の役割が増えたことである。印刷のモデルでは、書き手はもっぱら素のテキストを提供することが役目であり、書き手が組版の知識をもつ必要はなかった。しかしデジタルデバイスにおいては、各々の書き手は組版の担い手の一人となる。特に書き手が文字を特定する。正しい文字が使われていることは正しく組版を行うのに必要。よって、この文書はシステムへの要件としでだけではなく、書き手も読者対象とした。
+
+（デジタルデバイスでは入力しながら組版をしている。）
+
+- 一般の日本語の書き手。日本語使用者、ローカリゼーションエンジニア。
+- テキストシステムの設計者。
 
 ## 2. デジタルテキストは印刷とどのように異なるか
 デジタルテキスト組版が、印刷とどのように異なるかをまとめておく。
@@ -28,43 +37,39 @@
 #### 組版が完全に自動的に決まる必要がある
 従来の組版規則は人間が組版を行うための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの判断を期待するという性質を受け継いでいる。
 
-対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビの例。他に端的な例はあるか？）
+対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビや英単語、URLの例）
 
-#### 組版のコスト
-印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角の分割を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避けたいものである（本当？）。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角の分割を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
+#### （タイトル未定）
+印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避けたいものである。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
 
-組版の実行速度をコストとして捉えると、デジタルテキストは印刷とは異なるコスト圧力を受ける。例えば、デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。一次元的な処理は高速に実行可能であるが、より広い範囲を見て、または試行錯誤を伴う調整はより実行時間がかかる。
+#### 実行速度が重要である
+デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。一次元的な処理は高速に実行可能であるが、より広い範囲を見て、または試行錯誤を伴う調整はより実行時間がかかる。
 
-#### 媒体の性質
-歴史的に書写や印刷において、紙のコストおよび印刷物の在庫のコストが大きく、それが組版に大きな影響を与えてきた。例えば英語などに見えるパラグラフの示し方の変遷や、辞書での省略形の利用、新聞における平体の利用など（どれも確認必要）はその影響の一例である。デジタルテキストにはこのコストが存在せず、よってコストのための組版の工夫が必然性を失う。
+#### 紙のコストがない
+歴史的に書写や印刷において、紙のコストが大きく、それが組版に大きな影響を与えてきた。限られたページ数の中に情報を詰め込むための工夫などはその影響の例である。デジタルテキストにはこのような工夫は必要がない。
 
-対して、デジタルテキストは、画面の大きさによる制限を受ける。種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。
+#### 画面の大きさによる制約を受ける
+対して、デジタルテキストは、種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。かつ、最終的にどのような画面で読まれるかわからないので、一つの画面設計を全ての場合に当てはめることができない。
 
 #### リフローを起こす
-デジタルテキストにおいては送り手が組版結果を厳密に指定することができない。送り手はCSSやスタイル付きテキストなどを用いて組版の大枠を指定するが、最終的な結果はそれぞれの受け手の環境に従う。特に行長はデバイスの画面サイズやウィンドウのサイズに従って決定されるため、あらかじめ予見することができない。その結果、どこで行が折り返されるのか、長いグループルビが行の途中に来るのか折り返しにぶつかってしまうのか、事前に知ることはできない。
+デジタルテキストは受け手の環境に合わせて組版が行われるので、例えば行長はデバイスの画面サイズやウィンドウのサイズに従って決定され、あらかじめ予見することができない。その結果、どこで行が折り返されるのか事前に知ることはできない。
 
 #### 冊子形態が利点を失う
-内容が固定の大きさのページに分かれた本、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。古来の巻物に対して、冊子本が大きな優位性を持っていたからだ。冊子本は四角く、背表紙があるため収納・管理が容易である。ページ番号によりランダムアクセスが可能で、ページ番号による安定的な参照が可能である。しかしデジタルテキストには収納や検索の機能が本来的に備わっており冊子本の形式に頼らずに達成される。よって、冊子本はその本来の利点の多くを失った。デジタルテキストにおいて巻物という古い形式が復活し、また目的に沿った新しい画面構成がさまざまに試されている。
+ページの束からなる本、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。冊子本は四角く、背表紙があるため収納・管理が容易である。ページ番号によりランダムアクセスが可能である。しかしデジタルテキストには保存や検索の機能が本来的に備わっており冊子本の形式に頼らずに達成される。よって、冊子本はその本来の利点の多くを失った。デジタルテキストにおいてスクロール、巻物という形式が復活した。
 
 \*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree、 The Book in Renaissance、 NewHaven、 Yale University Press、 2010)
-
-#### ページの存在に依存した組版要素が使えない
-例えば脚注や段組。これは前項の一部で良いかね。
 
 #### 検索、選択、コピー＆ペースト、異なったスタイルの適用、リユース
 （デジタルデバイスならではの動的な要素。ましなタイトルが必要）
 
-#### インタラクティブな表示の活用
-ユーザーの操作に応じたインタラクティブな動作が可能であるので、例えば注釈をオーバーレイとして表示させるなど、新たな組版の可能性を考えることができる。
-
-#### 世界の中の日本語組版
+### 3. 世界の中の日本語組版（独立の項目として格上げ）
 デジタルデバイスにおける組版は、国際化ソフトウェアのアーキテクチャ、例えば Unicode 環境や国際化された基本APIの上で実装されるので、その環境で実装のしやすいものである必要がある。また、国際化されたソフトウェアは複数の言語を同時に扱うことを想定しており、例えば他の言語の中に日本語が埋め込まれる場合やその反対の場合を想定する必要がある。そのため、基本的な文字や行の配置方法に整合性が取れている必要がある。別の言語、特に英語で採用されている組版方法が日本語にも流れ込んでくる。例えばイタリックはその例である。さらに、目的の同じ組版が言語ごとに異なる場合、既に実装されている組版方法を採用する方向に圧力が働く。例えば注の組版方法として脚注が既に実装されている場合、割注の優先順位は下がる。
 
 国際化されたソフトウェアの中で、日本語は多数の言語の中の一つであり、関与する専門家は必ずしも日本語に精通しているわけではなく、また日本語のみに対して多くの開発コストをかけることもできない。デジタルデバイスにおける組版規則は、その各々の規則の必要性を非日本語話者に対して合理的に説明できる必要がある。これに対し、印刷組版規則は組版の専門家集団の間で継承されるものであったため、複雑な規則を多くの説明なしに継承してゆくことが可能であった。合意の形成や開発に必要な時間とコストを考えると、組版機能は自ずからよりシンプルなものになろう。
 
 このように見て行くとデジタルデバイスの組版にはアーキテクチャの違いから来る制約が存在することがわかるが、そのコインの裏には大きな可能性がある。それはデジタルネイティブな組版について考えるモティベーションとなる。
 
-#### アクセシビリティ、ユニバーサルデザイン
+### 4. アクセシビリティ、ユニバーサルデザイン（格上げ）
 印刷における一つの大きな制約は印刷のコストの大きさである。前に述べたようにデジタルデバイスにおいてはこれが劇的に安価かつ高速なため、受け手側で組版を行うことができる。冒頭で述べた、誰が組版を決定するのか、という点である。デジタルデバイスでは受け手が組版を決定するため、受け手の必要に応じて表示を最適化することができる。これはアクセシビリティを考慮する際に特に有利な特徴である。
 
 文字の大きさを自在に変えることができる機能は視力に衰えのある場合などに便利であるのはよく知られている。また例えばディスクレシア、読字障害はより複雑な障害だ。その内容は多様で、文字を目で追い、文字のまとまりを単語として認識し、読みに変換するという文を読む過程のどこに障害があるかによって、それを支援するために必要な表示方法に違いがあると言われている。デジタルデバイスなら、個々の障害の種類や程度に合わせて多様で最適な組版と表示を生成することができる。
@@ -77,16 +82,7 @@
 
 > 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
 
-## 3. 対象読者
-
-デジタルデバイスにおいてはテキストを作成する環境にも従来との違いがある。書き手の役割が増えたことである。印刷のモデルでは、書き手はもっぱら素のテキストを提供することが役目であり、書き手が組版の知識をもつ必要はなかった。しかしデジタルデバイスにおいては、各々の書き手は組版の担い手の一人となる。特に書き手が文字を特定する。正しい文字が使われていることは正しく組版を行うのに必要。よって、この文書はシステムへの要件としでだけではなく、書き手も読者対象とした。
-
-（デジタルデバイスでは入力しながら組版をしている。）
-
-- 一般の日本語の書き手。日本語使用者、ローカリゼーションエンジニア。
-- テキストシステムの設計者。
-
-## 4. 執筆方針
+## 6. 執筆方針
 
 `未整理でまだ箇条書き。`
 
