--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -3,73 +3,82 @@
 
 > 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件]」を参照のこと。
 
-この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストシステムを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。
+この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
 
 ## 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
 
-日本語の組版規則は、金属活字の技術を用いて読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字技術の性質を色濃く反映している。組版規則はまた、紙という媒体を用いる印刷の仕組みの性質を反映している。
+現在用いられている日本語の組版規則は、金属活字の技術の上で、読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字による作業の性質を色濃く反映している。組版規則はまた、より広く、紙という媒体を用いる印刷の仕組みの性質を反映している。
 
-これに対してデジタルテキストは印刷とは根本的に異なる技術的基盤を持っている。最も重要な違いは、個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
+これに対してデジタルテキストは印刷とは根本的に異なる技術基盤を持っている。重要な違いの一つは、個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
 
-（このパラグラフ書きすぎ。書き直す）印刷とデジタルテキストの違いのため、JLReq の組版規則をデジタルデバイスに適用しようとすると、実装の難しい点が出て来る（例）。また、印刷にはないデジタルテキスト独自の機能のための工夫が必要になる（より高度な組版のために使われるべきエンジニアの時間が、そこに至る前に消費されてしまう）。組版は目的ではなく、それぞれのテキストの持つ目的をよりよく達成するための手段であるから、デジタル技術は新たな可能性をもたらすだろう（よって、一度整理しておくことがさらなる発展のために必要）。
+また、技術そのものではないが、技術を取り巻く環境にも変化がある。例えばウェブを含むソフトウェアの開発が国際的な舞台で行われていること、書き手の組版に対する役割が飛躍的に増えたこと、アクセシビリティの確保が重要になったことなどである。
 
-本文書では、これらの観点から、従来の規則に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。また、デジタルにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、およびフォントに必要な機能についての章を加えている。
+このような技術基盤や周辺環境の違いから、JLReqを始めとする従来の組版規則の記述をそのままデジタルデバイスに適用しようとすると、さまざまな課題や、不足な点が明らかになる。
 
-執筆にあたっては、理由や背景を極力説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
+本文書はこのような課題や不足点を解決するため、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。また、デジタルテキストにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、および日本語フォントに必要な機能についての章を加えている。
 
-既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
+執筆にあたっては、できるだけ理由や背景を説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
-## 5. 対象読者
+既刊の「[日本語組版処理の要件]」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
 
-デジタルデバイスにおいてはテキストを作成する環境にも従来との違いがある。書き手の役割が増えたことである。印刷のモデルでは、書き手はもっぱら素のテキストを提供することが役目であり、書き手が組版の知識をもつ必要はなかった。しかしデジタルデバイスにおいては、各々の書き手は組版の担い手の一人となる。特に書き手が文字を特定する。正しい文字が使われていることは正しく組版を行うのに必要。よって、この文書はシステムへの要件としでだけではなく、書き手も読者対象とした。
+> これは実装者のためだけではなく、ユーザーにも読んでほしい文書である。上の分は主に実装者視点で書かれているが、ユーザーへの言葉はあるか？
 
-（デジタルデバイスでは入力しながら組版をしている。）
+## 2. 対象読者
+この文書の一番目の対象読者は、「[日本語組版処理の要件]」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語を理解しているエンジニアの存在が必要であろう。
 
-- 一般の日本語の書き手。日本語使用者、ローカリゼーションエンジニア。
-- テキストシステムの設計者。
+二番目の読者は、ウェブデザインやユーザーインターフェースなどの中で日本語テキストを扱う人である。これらのソフトウェアは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。
 
-## 2. デジタルテキストは印刷とどのように異なるか
-デジタルテキスト組版が、印刷とどのように異なるかをまとめておく。
+最後の読者は、日本語テキストを書く人すべてである。ここには日本語話者として日常的に日本語を書く人に加え、必ずしも日本語話者ではないがソフトウェアのローカリゼーションを行ったり、国際的な企業でブローシュアなどの印刷物を作る人を含む。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
 
-#### 組版が完全に自動的に決まる必要がある
-従来の組版規則は人間が組版を行うための原則として生また。時代を経て一部自動化され緻密化したが、人によるケースバイケースの判断を期待するという性質を受け継いでいる。
+## 3. 印刷との技術的な違い
+ここに、デジタルテキストの組版が、印刷とどのように異なるかをまとめる。
 
-対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人の目によるチェックと訂正が介在する余地がない。よって例外的な入力に対してでも破綻せず合理的な組版を決定できる必要がある。（長いルビや英単語、URLの例）
+#### 組版が完全に自動的に決まる
+従来の組版規則は人間が組版を行うための原則として生まれた。時代を経て一部自動化され緻密化したが、人によるケースバイケースの判断を期待するという性質を受け継いでいる。
 
-#### （タイトル未定）
-印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避けたいものである。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
+対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人による判断が介在する余地がない。よって、例えば長いルビやURLなど行の折り返しを大きく乱すような例外的な入力に対しても、破綻せず合理的な組版を決定できる必要がある。
+
+#### 活字組版の作業効率を考慮する必要がない
+印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避ける必要がある。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
 
 #### 実行速度が重要である
-デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。特に、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。一次元的な処理は高速に実行可能であるが、より広い範囲を見て、または試行錯誤を伴う調整はより実行時間がかかる。
+デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。例えば、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を、操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。
 
-#### 紙のコストがない
+#### 紙面のコストがない
 歴史的に書写や印刷において、紙のコストが大きく、それが組版に大きな影響を与えてきた。限られたページ数の中に情報を詰め込むための工夫などはその影響の例である。デジタルテキストにはこのような工夫は必要がない。
 
 #### 画面の大きさによる制約を受ける
-対して、デジタルテキストは、種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。かつ、最終的にどのような画面で読まれるかわからないので、一つの画面設計を全ての場合に当てはめることができない。
+対して、デジタルテキストは、種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。かつ、最終的にどのような画面で読まれるかわからないので、一つの設計を全ての場合に当てはめることができない。
 
-#### リフローを起こす
+#### 環境に合わせた柔軟な組版が行われる
 デジタルテキストは受け手の環境に合わせて組版が行われるので、例えば行長はデバイスの画面サイズやウィンドウのサイズに従って決定され、あらかじめ予見することができない。その結果、どこで行が折り返されるのか事前に知ることはできない。
 
-#### 冊子形態が利点を失う
-ページの束からなる本、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。冊子本は四角く、背表紙があるため収納・管理が容易である。ページ番号によりランダムアクセスが可能である。しかしデジタルテキストには保存や検索の機能が本来的に備わっており冊子本の形式に頼らずに達成される。よって、冊子本はその本来の利点の多くを失った。デジタルテキストにおいてスクロール、巻物という形式が復活した。
+#### スクロールして読まれる
+長文を同じサイズの多数のシートに分割し、それを綴じた形式、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。冊子本は四角く、収納・管理や持ち運びが容易であり、またページ番号によりランダムアクセスが可能、という巻き物にはない機能があった。
 
-\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree、 The Book in Renaissance、 NewHaven、 Yale University Press、 2010)
+しかしデジタルテキストには保存や検索の機能が本来的に備わっており、これらの機能は冊子本の形式に関係なく達成される。よって、冊子本の形はデジタルデバイスにおいて、その本来の利点の多くを失う。
 
-#### 検索、選択、コピー＆ペースト、異なったスタイルの適用、リユース
-（デジタルデバイスならではの動的な要素。ましなタイトルが必要）
+ウェブやメールに見られるように、デジタルデバイスにおいてはスクロールしながら読む巻物のような形態が主流であり、そこではページの存在を前提とするレイアウト方法を使うことができない。基本版面をテンプレートとして、同じサイズの複数のページに長文を分割してゆく方法はデジタルデバイスにおいては印刷の書籍を模するときに使われている。
 
-### 3. 世界の中の日本語組版（独立の項目として格上げ）
+\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree, The Book in the Renaissance, Yale University Press, 2010 [https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/])
+
+#### 動的な振る舞いがある
+デジタルテキストには、静的な画像である印刷にはない動的な振る舞いがある。選択、検索、データのコピー＆ペーストなどによる切り貼り、異なったスタイルの適用、異なった環境での表示などがその例である。
+
+このため、デジタルテキストに対しては静的な配置だけではなく、動的な振る舞いを決める必要がある。また、検索や、異なる環境での表示、異なるスタイルの適用などの振る舞いが正しく動くためには、ある特定の状態での見かけが正しいだけでは不足で、データそのものが正しい必要がある。
+
+## 4. 技術周辺の違い
+### グローバリゼーション
 デジタルデバイスにおける組版は、国際化ソフトウェアのアーキテクチャ、例えば Unicode 環境や国際化された基本APIの上で実装されるので、その環境で実装のしやすいものである必要がある。また、国際化されたソフトウェアは複数の言語を同時に扱うことを想定しており、例えば他の言語の中に日本語が埋め込まれる場合やその反対の場合を想定する必要がある。そのため、基本的な文字や行の配置方法に整合性が取れている必要がある。別の言語、特に英語で採用されている組版方法が日本語にも流れ込んでくる。例えばイタリックはその例である。さらに、目的の同じ組版が言語ごとに異なる場合、既に実装されている組版方法を採用する方向に圧力が働く。例えば注の組版方法として脚注が既に実装されている場合、割注の優先順位は下がる。
 
 国際化されたソフトウェアの中で、日本語は多数の言語の中の一つであり、関与する専門家は必ずしも日本語に精通しているわけではなく、また日本語のみに対して多くの開発コストをかけることもできない。デジタルデバイスにおける組版規則は、その各々の規則の必要性を非日本語話者に対して合理的に説明できる必要がある。これに対し、印刷組版規則は組版の専門家集団の間で継承されるものであったため、複雑な規則を多くの説明なしに継承してゆくことが可能であった。合意の形成や開発に必要な時間とコストを考えると、組版機能は自ずからよりシンプルなものになろう。
 
 このように見て行くとデジタルデバイスの組版にはアーキテクチャの違いから来る制約が存在することがわかるが、そのコインの裏には大きな可能性がある。それはデジタルネイティブな組版について考えるモティベーションとなる。
 
-### 4. アクセシビリティ、ユニバーサルデザイン（格上げ）
+### 5. アクセシビリティ
 印刷における一つの大きな制約は印刷のコストの大きさである。前に述べたようにデジタルデバイスにおいてはこれが劇的に安価かつ高速なため、受け手側で組版を行うことができる。冒頭で述べた、誰が組版を決定するのか、という点である。デジタルデバイスでは受け手が組版を決定するため、受け手の必要に応じて表示を最適化することができる。これはアクセシビリティを考慮する際に特に有利な特徴である。
 
 文字の大きさを自在に変えることができる機能は視力に衰えのある場合などに便利であるのはよく知られている。また例えばディスクレシア、読字障害はより複雑な障害だ。その内容は多様で、文字を目で追い、文字のまとまりを単語として認識し、読みに変換するという文を読む過程のどこに障害があるかによって、それを支援するために必要な表示方法に違いがあると言われている。デジタルデバイスなら、個々の障害の種類や程度に合わせて多様で最適な組版と表示を生成することができる。
@@ -85,10 +94,6 @@
 ## 6. 執筆方針
 
 `未整理でまだ箇条書き。`
-
-#### スコープ外
-- 印刷で出版されている書籍をその組版のルールを保ったまま電子化するような用途はスコープ外とする。同様にページの存在に頼る機能はスコープ外。
-- 国際化システムの中の日本語として記述。日本語独特ではない部分の組版には踏み込まない。例えば欧文、数式、添字、単位記号など。界面の振る舞いのみを定義する。
 
 #### 技術の取り扱い
 - JLReq においては組版の現在の姿を表すために実装とは独立の記述方法をとっている。実装と独立の記述が可能なのは技術が成熟しきっている証左である。技術の進歩が大きい場合、技術につれて可能なことが変化するので、技術独立の記述が不可能になる。デジタルネイティブな組版においては技術との整合性が重要なポイントの一つであるため、実装を考慮した記述となる。エンジニアが読んで実装に移れるような記述にすることが重要である。
@@ -108,3 +113,7 @@
 #### 位置付け、書き方
 - 規範というよりガイドライン。「推奨」と「要件」は明確に分けて、わかるように書く
 - 理由を説明する。背景を示す：組版機能に対し、なぜそのような方法になっているのか、その理由を示すことでより良い理解を助ける。組版の方法や値が複数ある場合や、明確な答えがない場合には、その機能を考える際に重要な要素を示すことで独自の判断を助ける。結果のみではなく理由を示すことで、そこで示されている方法と異なった方法を試みることを可能にし、また議論と将来の進化を促すような内容にする。背景理解に役に立つ場合歴史的な経緯を示す。ただし歴史そのものが目的ではないので注意。
+
+#### スコープ外
+- 印刷で出版されている書籍をその組版のルールを保ったまま電子化するような用途はスコープ外とする。同様にページの存在に頼る機能はスコープ外。
+- 国際化システムの中の日本語として記述。日本語独特ではない部分の組版には踏み込まない。例えば欧文、数式、添字、単位記号など。界面の振る舞いのみを定義する。
