Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,81 +1,99 @@
-# 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）
-> == プレーンテキストではないので、タイトルなど考える
+## 第2章 日本語デジタルテキストの基礎と書き方
+> 第2章で、日本語デジタルテキストの基礎、および組版のための日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に、対象読者のうち三番目、日本語テキストを書く人は第3章までで読み止めても大丈夫なようにする。
+組版・テキストレイアウトの観点での書き方であること。
 
-前書き。なければemptyで構わない
-- 書くことの意味が、紙とデジタルで変わっていること
-- ここで扱うのはこの文字コードの使い方、特にレイアウトに影響する文字の使い方であること（日本語という言語をどのように書くのかには触れない）
+### 2.1 デジタルデバイス上の日本語書き言葉の特徴
+> 2.1では日本語デジタルテキスト、すなわちデジタルにおける日本語書き言葉の特徴を解説する。必要十分な量で。深入りしすぎない。
+> 
+> デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の one paragraph サマリ。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
+日本語は異なるスクリプト、仮名、漢字、ラテンアルファベット、アラビア数字、そして約物・記号を使って記述される（全てを含んだ例文）。語区切り文字がなく、そのため語の定義自体が必ずしも明白でない。縦書きと横書きがある（例）。漢字で書かれた単語に複数の読み方がある（例）ため、書き言葉と読みの二重構造があり、ルビや、フリガナ欄のある（それぞれ例）。これらのことから世界の中でも最も複雑な書記体系の一つである。
 
-検索への対応。コピー&ペーストの問題。
-アクセシビリティ：段落をBRを。ツールがそのようにしちゃうものがある。段落のナビゲーションで困る。→4. アクセシビリティ
+現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で黒みが強く、ひらがなは曲線が多く比較的単純である。この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、数字と英字、約物・記号が加わる。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。次節でこれらについて概説する。
 
-//
+書くことの意味が、紙とデジタルで変わっていることの説明。
 
+### 2.2 日本語デジタルテキストに使用する文字
+#### ひらがなとカタカナ
+####  漢字
+#### 数字、英字
+#### 約物・記号
+#### デジタルデバイス上の日本語に独特な文字
+##### 全角数字や英字
+##### 半角カタカナ
+##### 絵文字
 
----
-以下はメモ
-## 第2章の章立て
+### 2.3 必要とするシステムの能力
+> 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
 
-### 1. 日本語デジタルテキストで使用する文字（旧[1.2章日本語で使用する文字]([url](https://github.com/w3c/jlreq-d/wiki/1.2-日本語で使用する文字#12-日本語で使用する文字)https://github.com/w3c/jlreq-d/wiki/1.2-日本語で使用する文字#12-日本語で使用する文字)）
+### 2.4 文字の使い方の注意点
+> 書くことの意味が、紙とデジタルで変わっている。目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
 
-### 2. 文字セット
-  - X0213が最低限の基準
-  - X0208は本文には不足だが、タイトルやデザインに使える
-  - 書籍にはAdobe-Japan1-5以上
-  - 漢字の制限について（常用漢字、教育漢字）
-    - 教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
-
-### 3. 文字の使い方
->内容の書き表し方ではなく、文字通り文字の使い方。そのように断って、内容の書き表し方については内閣告示を紹介する。
-- 英字（欧文、全角、和欧間空白）
-- 数字（欧文、全角）
-- 約物の使い方
+#### 英字（欧文、全角、和欧間空白）
+#### 数字（欧文、全角）
+- ラテン文字の単語の前後にスペースを追加すべきかどうかなど（一般的に述べる）
+#### 約物
   - 括弧
+	- 例えば全角括弧とプロポーショナル括弧の使い方。どちらのコンテキストか。
+	- 囲む範囲の違い。英文の括弧は英字をディセンダを含めて囲むように、和文の括弧は全角和文を囲むように作られていて、ベースラインの調整とは関係なく、上下範囲が異なる
   - ダッシュ類
-  - その他
-    - 約物に関して入力プログラムに望まれる機能についてチラと触れる。本格的にはシステムへの要求事項の章で
-- （**それぞれの場所で必要に応じて触れる**）使用に際して紛らわしい文字・記号（見た目の紛らわしい vs 似た機能の問題）
-  - フォームの問題
-  - 全角不等号 vs 括弧（禁則）
-  - 一般的に全角と半角の同じ意味の文字。フレキシビリティ
-  - 個別の例を挙げるとキリがないので、一般的な問題として述べる
-  - 長音 vs ダッシュ、ダッシュ問題（U+2014 vs 2015）、二分ダーシ（キャプション、図番号の区切り）
-  - 入力システムの問題
-  - 禁則に関わる
-  - × OCR誤認識の可能性。固定幅フォント？OCR用フォント？
-  - [Unicodeのconfusable](https://util.unicode.org/UnicodeJsps/confusables.jsp?a=&r=None)
-  - 祟る崇拝、柿柿
- 
-小林さん：文章を書くことの意味がデジタルで変わってきている。デジタルで書く：見かけではなくて、コードを入力している。原稿用紙と本質的に意味が変わっている。グリフの形ではなく、コードを入力している。（システムや入力の補助が欲しい）。
-太郎さん：現実の文字コードには、、、（キャラクタ・グリフモデルがちゃんと働いていない場合もあるので）
-小林さん：何か書く。
-敏先生：小林さんへ補足。昔は手書き原稿。組版担当者が選び直す。横棒がどんな役目をしているかに従って選ぶ。デジタルになって自分でしなければならなくなった。記号の混用が進んだ。Unicodeになって、分けられるようになったが、まだ混乱が続いている。
-太郎さん：欧文については区別できている、日本語ではうまくない。
-木田：まとめ：
+- 疑問符感嘆符
+	- の後は一文字空ける。開けない場所も説明
+- カバーしたいこと
+	- JLReq をスキャンして、文字の使い方に関連することを拾い出す
+	- 見た目で紛らわしく、誤用しやすい文字を洗い出す（[Unicodeのconfusable](https://util.unicode.org/UnicodeJsps/confusables.jsp?a=&r=None)?）
+	- 約物に関して入力プログラムに望まれる機能について触れる
+	- 同音異義語の選択誤りを避ける：e.g. 意外 vs 以外。また紛らわしい漢字について触れるか？祟る崇拝、柿柿
+	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
+	- Unicodeに不足している文字（全角ダブルクオートなど）
 
-### 4. デジタルテキストと組方向（vertical setting or vertical composition -> 縦組と言うべき)
-テキストがあって、それを縦組横組の制約のために作るかどうか。制約の問題ではなくて選択肢の問題。
+### 2.5 生きたテキストにするために必要なこと
+> アクセシビリティ・検索への対応。コピー&ペーストの問題。 
+改行は段落を示す。一定文字ごとに強制的な改行を入れない。
 
-- 縦書きに対応させる方法（横書きを縦書きにする時の問題点、解決方法。反対方向はあまり問題ない）
+### 2.6 フォントの選択
+#### 書体の選び方
+ゴシック、丸ゴシック、明朝は様々なコンテントに汎用に使える。スタイルの合う英字書体がある。国際化にはこれらを使う。多くのフォントがあり、文字数の揃っているものも多い。
 
-敏先生：横書きをそのまま縦書きにしちゃってもいいんじゃないか？ → と言う考え方もある、と紹介
-太郎さん：アラビア数字を縦書きにするときはどうするの？　敏先生：ある方針を決めればいいじゃない。
-田嶋さん：一桁全角にこだわる編集者も多い
-美しい縦書きを作りたいのか、実用的な意味で作りたいのか
+ペンや鉛筆で書いたような書体や教科書体は、カジュアルなもしくは懐かしい雰囲気。筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。同様に特定用途：アンチック、学参、字幕用。
 
-- 両方向に対応したテキスト
+デザイン書体
 
-鈴木さん：縦書きと縦組の区別：頭九十度回転。
+ 日本語でない漢字フォントに注意。字形の違い。
 
-### (必要なし）5. 日本語のローマ字での表現とローマ字入力（必要なし）
-- 内閣告示・内閣訓令の「外来語の表記」や「ローマ字のつづり方」を紹介
-- 現実的対応として、外国語の表記に出てくる音を含め、現実の日本語入力がサポートしている変換を表にする。日本語入力への要求としてではなく、日本語入力を使うための知識として
+かな書体
 
-### 5. 入力の問題（場所を作っておいて、内容が十分あれば残す）
-- キーボードで入力できない文字コードがある
-- 音声入力でどうする？
-- 使い分けをユーザーレベルで期待できない。入力システムの進化が期待される
-- 検索への対応。コピー&ペーストの問題。データの再利用への対応。画像のPDFは検索できず、アクセシブルではない。
+英字書体
 
+一般的に文字サイズの小さい本文にはゴシックや明朝など中庸で抽象度の高い書体を用いる。
 
+#### 英字書体との合わせ方
+書体、サイズとウェイトの合わせ方。
 
+デザイン：不安なく合わせられるのは、Serifと明朝、Sans-serifとゴシック、Roundと丸ゴシック。他の場合は書体の知識のある人の判断が必要。例えば、筆書系書体が伝統的だからといって、伝統的な英字書体と合うわけでも、また用途が似ているわけでもないのに注意（e.g. 英語筆記体で書いてあるバースデーカードを日本語化する際に行書が最適というわけではない）。またディスプレー書体を含んだテンプレートなどの国際化に注意。例えば、特定の国のスクール風はその他の国のスクール風ではない。
+
+サイズ：従属欧文はディセンダが小さく日本語書体に合わせやすくなっている。任意の欧文と合わせるときのサイズの合わせ方。フォントサイズでは必ずしも合わせられない（サイドノートでcssのプロパティの紹介）。
+
+ウェイト：
+
+#### 文字セット
+> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。AdobeJapan1についても言及。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
+
+### 2.7 段落と組方向
+> コンテントとスタイルの分離の原則を説明
+
+#### 段落スタイル
+> 段下げと、段落の間に行送り方向に空間を開ける方法。
+
+#### 組み方向
+> 縦書きのあること。書き方のスタイルに若干の違いのあること。両方の方向に対応したテキストデータを作成するための問題点。横書きをベースに、縦書きがどう異なるかを説明。
+> 横書きを縦書きにする時の問題点、解決方法。反対方向はあまり問題ない
+> 
+長いURLは書くより可能ならリンクに。
+
+> 鈴木さん：縦書きと縦組の区別：頭九十度回転。：これ、意味があとでわからなかった。要確認。
+
+対処方法：
+1. 両方に適した書き方にする
+2. 両方に最適化
+3. 片方用に書いたものを両方にそのまま適用
 
