Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -1,13 +1,13 @@
-# 第1章 この文書の目的・対象読者
+## 第1章 この文書の目的・対象読者
 > この章は、この文書の位置付け、それが必要な理由、なぜあなたが読む必要があるかを書く。
 
 > 冒頭に、非常に簡潔にこの文書は何であるかを書く。
  
-この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件]」を参照のこと。
+この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
 
 この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
 
-## 1. この文書の目的
+### 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
 
 現在用いられている日本語の組版規則は、金属活字の技術の上で、読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字による作業の性質を色濃く反映している。組版規則はまた、より広く、紙という媒体を用いる印刷の仕組みの性質を反映している。
@@ -22,18 +22,18 @@
 
 執筆にあたっては、できるだけ理由や背景を説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
-既刊の「[日本語組版処理の要件]」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
+既刊の「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」が印刷における組版という既に確立された規則を記述しているのに対し、この文書は日々進化しつつあるデジタル環境における組版について論じている。よって、デジタルデバイスやデジタルテキストの進化に従って、この文書もまたそれを取り込んでゆくことが必要となろう。
 
 > これは実装者のためだけではなく、ユーザーにも読んでほしい文書である。上の分は主に実装者視点で書かれているが、ユーザーへの言葉はあるか？
 
-## 2. 対象読者
-この文書の一番目の対象読者は、「[日本語組版処理の要件]」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語を理解しているエンジニアの存在が必要であろう。
+### 2. 対象読者
+この文書の一番目の対象読者は、「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」と同様、テキストに関わるソフトウェアの設計・実装者である。ソフトウェア開発はグローバル化しているので、日本語の知識のほとんどないエンジニアでも理解できるよう必要な基礎からカバーし、また暗黙に前提とする知識に気を使いながら執筆した。ただし、設計・実装は数々の判断や試行錯誤の連続であり、依然としてそこに深く日本語を理解しているエンジニアの存在が必要であろう。
 
-二番目の読者は、ウェブデザインやユーザーインターフェースなどの中で日本語テキストを扱う人である。これらのソフトウェアは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。
+二番目の読者は、日本語テキストの体裁を扱う人である。ウェブやデジタルデバイスのAPI、デザインツールなどは組版に対して大きな柔軟性を提供するので、目的に沿ったデザインを実現するには日本語組版に対する広範な知識が必要となる。
 
-最後の読者は、日本語テキストを書く人すべてである。ここには日本語話者として日常的に日本語を書く人に加え、必ずしも日本語話者ではないがソフトウェアのローカリゼーションを行ったり、国際的な企業でブローシュアなどの印刷物を作る人を含む。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
+最後の読者は、日本語テキストを書く人である。ここには日本語話者として日常的に日本語を書く人に加え、必ずしも日本語話者ではないがソフトウェアのローカリゼーションを行ったり、国際的な企業でブローシュアなどの印刷物を作る人を含む。デジタルテキストは、多くの場合専門家による校正を経ずに直接組版されるので、書き手自身が文字やフォントの正確な使い方を知っていることは重要である。よって本文書では組版の観点からのテキストの書き方をカバーしている。
 
-## 3. 印刷との技術的な違い
+### 3. 印刷との技術的な違い
 ここに、デジタルテキストの組版が、印刷とどのように異なるかをまとめる。
 
 #### 組版が完全に自動的に決まる
@@ -63,22 +63,22 @@
 
 ウェブやメールに見られるように、デジタルデバイスにおいてはスクロールしながら読む巻物のような形態が主流であり、そこではページの存在を前提とするレイアウト方法を使うことができない。基本版面をテンプレートとして、同じサイズの複数のページに長文を分割してゆく方法はデジタルデバイスにおいては印刷の書籍を模するときに使われている。
 
-\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree, The Book in the Renaissance, Yale University Press, 2010 [https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/])
+\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree, The Book in the Renaissance, Yale University Press, 2010 [https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/](https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/))
 
 #### 動的な振る舞いがある
 デジタルテキストには、静的な画像である印刷にはない動的な振る舞いがある。選択、検索、データのコピー＆ペーストなどによる切り貼り、異なったスタイルの適用、異なった環境での表示などがその例である。
 
 このため、デジタルテキストに対しては静的な配置だけではなく、動的な振る舞いを決める必要がある。また、検索や、異なる環境での表示、異なるスタイルの適用などの振る舞いが正しく動くためには、ある特定の状態での見かけが正しいだけでは不足で、データそのものが正しい必要がある。
 
-## 4. 技術周辺の違い
-### グローバリゼーション
+### 4. 技術周辺の違い（社会的要因の変化？）
+#### グローバリゼーション
 デジタルデバイスにおける組版は、国際化ソフトウェアのアーキテクチャ、例えば Unicode 環境や国際化された基本APIの上で実装されるので、その環境で実装のしやすいものである必要がある。また、国際化されたソフトウェアは複数の言語を同時に扱うことを想定しており、例えば他の言語の中に日本語が埋め込まれる場合やその反対の場合を想定する必要がある。そのため、基本的な文字や行の配置方法に整合性が取れている必要がある。別の言語、特に英語で採用されている組版方法が日本語にも流れ込んでくる。例えばイタリックはその例である。さらに、目的の同じ組版が言語ごとに異なる場合、既に実装されている組版方法を採用する方向に圧力が働く。例えば注の組版方法として脚注が既に実装されている場合、割注の優先順位は下がる。
 
 国際化されたソフトウェアの中で、日本語は多数の言語の中の一つであり、関与する専門家は必ずしも日本語に精通しているわけではなく、また日本語のみに対して多くの開発コストをかけることもできない。デジタルデバイスにおける組版規則は、その各々の規則の必要性を非日本語話者に対して合理的に説明できる必要がある。これに対し、印刷組版規則は組版の専門家集団の間で継承されるものであったため、複雑な規則を多くの説明なしに継承してゆくことが可能であった。合意の形成や開発に必要な時間とコストを考えると、組版機能は自ずからよりシンプルなものになろう。
 
 このように見て行くとデジタルデバイスの組版にはアーキテクチャの違いから来る制約が存在することがわかるが、そのコインの裏には大きな可能性がある。それはデジタルネイティブな組版について考えるモティベーションとなる。
 
-### 5. アクセシビリティ
+#### アクセシビリティ
 印刷における一つの大きな制約は印刷のコストの大きさである。前に述べたようにデジタルデバイスにおいてはこれが劇的に安価かつ高速なため、受け手側で組版を行うことができる。冒頭で述べた、誰が組版を決定するのか、という点である。デジタルデバイスでは受け手が組版を決定するため、受け手の必要に応じて表示を最適化することができる。これはアクセシビリティを考慮する際に特に有利な特徴である。
 
 文字の大きさを自在に変えることができる機能は視力に衰えのある場合などに便利であるのはよく知られている。また例えばディスクレシア、読字障害はより複雑な障害だ。その内容は多様で、文字を目で追い、文字のまとまりを単語として認識し、読みに変換するという文を読む過程のどこに障害があるかによって、それを支援するために必要な表示方法に違いがあると言われている。デジタルデバイスなら、個々の障害の種類や程度に合わせて多様で最適な組版と表示を生成することができる。
@@ -91,9 +91,9 @@
 
 > 本文書ではJLReq が取り扱っていない範囲の話題を扱っている。一つはテキストの作り方である。印刷においては、書き手の作成したテキストは、編集・組版のプロセスの中で人の手で誤りが正されて、最終の組版ができあがる。デジタルにおいては、書き手はテキストのみならず、フォントやサイズ、パラグラフのスタイルなどの広範な組版指示を含めたスタイル付きテキストを作成し、それがそのまま組版される。つまり、デジタルにおいては書き手は組版の重要な一部を担うことになる。よって、この文書では組版の観点からのテキストの作成を取り扱った。
 
-## 6. 執筆方針
+### 5. 執筆方針
 
-`未整理でまだ箇条書き。`
+> ここは未整理でまだ箇条書き。
 
 #### 技術の取り扱い
 - JLReq においては組版の現在の姿を表すために実装とは独立の記述方法をとっている。実装と独立の記述が可能なのは技術が成熟しきっている証左である。技術の進歩が大きい場合、技術につれて可能なことが変化するので、技術独立の記述が不可能になる。デジタルネイティブな組版においては技術との整合性が重要なポイントの一つであるため、実装を考慮した記述となる。エンジニアが読んで実装に移れるような記述にすることが重要である。
@@ -117,3 +117,4 @@
 #### スコープ外
 - 印刷で出版されている書籍をその組版のルールを保ったまま電子化するような用途はスコープ外とする。同様にページの存在に頼る機能はスコープ外。
 - 国際化システムの中の日本語として記述。日本語独特ではない部分の組版には踏み込まない。例えば欧文、数式、添字、単位記号など。界面の振る舞いのみを定義する。
+- Unicodeでないシステム
