Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,6 +1,5 @@
 ## 第2章 日本語デジタルテキストの基礎と書き方
-> 第2章で、日本語デジタルテキストの基礎、および組版のための日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に、対象読者のうち三番目、日本語テキストを書く人は第3章までで読み止めても大丈夫なようにする。
-組版・テキストレイアウトの観点での書き方であること。
+> この章で、日本語デジタルテキストの基礎、および組版のための日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に、対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。組版・テキストレイアウトの観点での書き方であることに注意。
 
 ### 2.1 デジタルデバイス上の日本語書き言葉の特徴
 > 2.1では日本語デジタルテキスト、すなわちデジタルにおける日本語書き言葉の特徴を解説する。必要十分な量で。深入りしすぎない。
